--- a/_includes/social-networks.html
+++ b/_includes/social-networks.html
@@ -1,17 +1,17 @@
 <div class='full parallax social-networks' style="background-image: url({{ "/assets/images/@stock/socials-bg.jpg" | relative_url }})">
   <div class='two spacing'></div>
   <div class='row'>
-    <div class='medium-3 columns'>
+    <div class='medium-4 columns'>
       <div class='big-social'>
-        <a href='http://facebook.com'>
-          <i class='fa fa-facebook'></i>
+        <a href='https://www.instagram.com/tutordscholars/' target="_blank">
+          <i class='fa fa-instagram'></i>
         </a>
-        <h4>Facebook</h4>
-        <p>Connect us with facebook</p>
+        <h4>Instagram</h4>
+        <p>Find us on the 'Gram </p>
       </div>
       <div class='two spacing'></div>
     </div>
-    <div class='medium-3 columns'>
+    <div class='medium-4 columns'>
       <div class='big-social'>
         <a href='http://twitter.com'>
           <i class='fa fa-twitter'></i>
@@ -21,7 +21,7 @@
       </div>
       <div class='two spacing'></div>
     </div>
-    <div class='medium-3 columns'>
+    <div class='medium-4 columns'>
       <div class='big-social'>
         <a href='http://dribbble.com'>
           <i class='fa fa-dribbble'></i>
@@ -31,6 +31,7 @@
       </div>
       <div class='two spacing'></div>
     </div>
+<!--
     <div class='medium-3 columns'>
       <div class='big-social'>
         <a href='http://tumblr.com'>
@@ -41,6 +42,7 @@
       </div>
       <div class='two spacing'></div>
     </div>
+-->
   </div>
   <div class='two spacing'></div>
 </div>
