--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,14 @@
   <div id="footer" class='centered-text'>
     <div class='row'>
       <div class='large-12 columns'>
-        <h4>©{{site.time | date: "%Y" }} TutorD Scholars. All rights reserved.</h4>
+        <h4>©{{site.time | date: "%Y" }} TutorD Scholars 501(c)(3). All rights reserved.</h4>
       </div>
     </div>
   </div>
   <div class="four spacing"></div>
 </div>
 
-{% for path in site.data.assets.js %}    
+{% for path in site.data.assets.js %}
 
   {%- if path contains '://' -%}
     {%- assign src = path -%}
