--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,9 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href='{{ 'index.html' | relative_url }}'>
-            <img width="126" height="48" alt="" src="{{ "/assets/images/logo-3.png" | relative_url }}" />
+          <a href='{{ site.baseurl | relative_url }}'>
+<!--            <img width="126" height="48" alt="" src="{{ "/assets/images/logo.svg" | relative_url }}" />-->
+            <img width="126" height="48" src="{{ site.baseurl }}/assets/images/logo-white.svg" alt="TutorD Logo">
           </a>
         </h1>
       </li>
@@ -30,12 +31,12 @@
 
             {% if first != '#' %}
               {% assign href = item.path | relative_url %}
-            {% elsif page.onepage %}          
+            {% elsif page.onepage %}
               {% assign href = item.path %}
-            {% else %}              
-              {% assign href = 'index.html' | append:item.path | relative_url %}              
+            {% else %}
+              {% assign href = 'index.html' | append:item.path | relative_url %}
             {% endif %}
-            
+
             <a href="{{ href }}">{{ item.name }}</a>
           </li>
         {% endfor %}
