--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -41,13 +41,11 @@
         <div class='contact-details'>
           <div class='content'>
             <h4>Head office:</h4>
-            <p>41 Dean Street, London, UK</p>
+            <p>Crenshaw Ave, Los Angeles, CA</p>
             <h4>Phone:</h4>
-            <p>+86 (03) 9810 4612</p>
-            <h4>Fax:</h4>
-            <p>+6102 236338 5456</p>
+            <p>+1 (301) 404 - 1730</p>
             <h4>Email:</h4>
-            <p>info@wrap-team.com</p>
+            <p>scholars@tutord.io</p>
           </div>
         </div>
       </div>
