--- a/_includes/social-networks.html
+++ b/_includes/social-networks.html
@@ -1,4 +1,4 @@
-<div class='full parallax social-networks' style="background-image: url({{ "/assets/images/@stock/socials-bg.jpg" | relative_url }})">
+<div class='full parallax social-networks' style="background-image: url({{ "/assets/images/stills/MVI_5606.00_00_02_06.Still001.jpg" | relative_url }})">
   <div class='two spacing'></div>
   <div class='row'>
     <div class='medium-4 columns'>
