Fixed members photos, and added movement events

--- a/_includes/service.html
+++ b/_includes/service.html
@@ -1,12 +1,14 @@
 <div class='mod modIconText moveup' data-delay='0'>
   <div class='icon-text-advanced' data-bg="{{ include.service.bg | relative_url }}">
-    <div class='wrapper'>
-      <div class='content'>
-        <i class='{{ include.service.icon }}'></i>
+    <a href='{{ include.service.link}}'>
+      <div class='wrapper'>
+        <div class='content'>
+          <i class='{{ include.service.icon }}'></i>
+        </div>
       </div>
-    </div>
-    <h3>{{ include.service.title | escape }}</h3>
-    <p>{{ include.service.desc | escape }}</p>
-    <div class="spacing"></div>
+      <h3>{{ include.service.title | escape }}</h3>
+      <p>{{ include.service.desc | escape }}</p>
+      <div class="spacing"></div>
+    </a>
   </div>
 </div>
