--- a/_includes/social-networks.html
+++ b/_includes/social-networks.html
@@ -7,27 +7,27 @@
           <i class='fa fa-instagram'></i>
         </a>
         <h4>Instagram</h4>
-        <p>Find us on the 'Gram </p>
+        <p>Find us on IG </p>
       </div>
       <div class='two spacing'></div>
     </div>
+<!--    <div class='medium-4 columns'>-->
+<!--      <div class='big-social'>-->
+<!--        <a href='http://twitter.com'>-->
+<!--          <i class='fa fa-twitter'></i>-->
+<!--        </a>-->
+<!--        <h4>Patreon</h4>-->
+<!--        <p>Follow our tweets</p>-->
+<!--      </div>-->
+<!--      <div class='two spacing'></div>-->
+<!--    </div>-->
     <div class='medium-4 columns'>
       <div class='big-social'>
-        <a href='http://twitter.com'>
-          <i class='fa fa-twitter'></i>
+        <a href='https://www.youtube.com/channel/UCRAnUTvfhOM0nQVkmVJO-0w'>
+          <i class='fa fa-youtube-play'></i>
         </a>
-        <h4>Twitter</h4>
-        <p>Follow our tweets</p>
-      </div>
-      <div class='two spacing'></div>
-    </div>
-    <div class='medium-4 columns'>
-      <div class='big-social'>
-        <a href='http://dribbble.com'>
-          <i class='fa fa-dribbble'></i>
-        </a>
-        <h4>Dribbble</h4>
-        <p>Share some latest works</p>
+        <h4>Youtube</h4>
+        <p>Subscribe to our channel</p>
       </div>
       <div class='two spacing'></div>
     </div>
