--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -41,7 +41,15 @@
         <div class='contact-details'>
           <div class='content'>
             <h4>Head office:</h4>
-            <p>Crenshaw Ave, Los Angeles, CA</p>
+            <p>
+              TutorD Scholars
+              <br>
+              4859 W. Slauson Ave
+              <br>
+              PO Box 121
+              <br>
+              Los Angeles, CA 90056
+            </p>
             <h4>Phone:</h4>
             <p>+1 (301) 404 - 1730</p>
             <h4>Email:</h4>
