--- a/_includes/service.html
+++ b/_includes/service.html
@@ -1,6 +1,6 @@
 <div class='mod modIconText moveup' data-delay='0'>
   <div class='icon-text-advanced' data-bg="{{ include.service.bg | relative_url }}">
-    <a href='{{ include.service.link}}'>
+    <a href='{{ include.service.link}}' target="_blank">
       <div class='wrapper'>
         <div class='content'>
           <i class='{{ include.service.icon }}'></i>
