--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,12 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+  <script>
+    console.log('about to check for google_analytics..');
+  </script>
+  {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
+  {% endif %}
   {% for path in site.data.assets.css %}
 
     {%- if path contains '://' -%}
@@ -20,8 +26,4 @@
   <link rel="icon" type="image/png" href="{{ page.url | absolute_url }}assets/images/favicon.ico">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
-  {% if jekyll.environment == 'production' and site.google_analytics %}
-    {% include google-analytics.html %}
-  {% endif %}
 </head>
