Deleted unused images, and updated text and typos

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -51,7 +51,7 @@
               Los Angeles, CA 90056
             </p>
             <h4>Phone:</h4>
-            <p>+1 (301) 404 - 1730</p>
+            <p><a href="tel:18778092260">+1 (877) 809 - 2260</a></p>
             <h4>Email:</h4>
             <p>scholars@tutord.io</p>
           </div>
