added proper copy and registered trademark symbols to page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div id="footer" class='centered-text'>
     <div class='row'>
       <div class='large-12 columns'>
-        <h4>©{{site.time | date: "%Y" }} TutorD Scholars 501(c)(3). All rights reserved.</h4>
+        <h4>&#169;{{site.time | date: "%Y" }} TutorD Scholars&#174; 501(c)(3). All rights reserved.</h4>
       </div>
     </div>
   </div>
