--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -53,7 +53,7 @@
             <h4>Phone:</h4>
             <p><a href="tel:18778092260">+1 (877) 809 - 2260</a></p>
             <h4>Email:</h4>
-            <p>scholars@tutord.io</p>
+            <p><a href="mailto:scholars@tutord.io">scholars@tutord.io</a></p>
           </div>
         </div>
       </div>
